successfully populated my AvatarItem component with the api data, fixed a spacing issue in CSS

--- a/src/components/avatar-item.css
+++ b/src/components/avatar-item.css
@@ -3,12 +3,12 @@
     height: 250px;
     width: 300px;
     text-align: center;
-    margin: 0 10px 10px 0;
     background-color: #8F989A;
     border: 2px solid #E0D4AB;
     box-shadow: 4px 4px 4px black;
     font-style: italic;
     margin: auto;
+    margin-bottom: 15px;
 }
 
 .avatar-item img {
